# SupraTeam

./: .env.example  .gitignore  .vercelignore  AUDIT.md  CLAUDE.md  EMAIL_AUDIT.md  FROZEN.md  MERGE-PLAN.md  calendar-tools-research.md  cpo-persona-ratings-v2.md  cpo-persona-ratings.md  crm-north-star.md  dmitry-r-fresh-review.md  email-audit.md  email-integration-plan.md  email-roadmap.md  email-user-testing.md  extension.json  implementation-plan.md  instrumentation.ts  mail0-technical-analysis.md  middleware.ts  next.config.ts  package-lock.json  package.json  persona-improvement-research.md  plan.md  railway.json  railway.toml  remaining-plan.md  research-and-analysis.md  start.sh  strategic-roadmap.md  superhuman-alternatives-research.md  tailwind.config.ts  telegram-user-testing.md  telegram_crm_ratings.xlsx  tsconfig.json  vercel.json
.claude/: launch.json  settings.json
app/: error.tsx  globals.css  layout.tsx  page.tsx
bot/: drip-worker.ts  index.ts  outreach-worker.ts  sequence-worker.ts
components/: ai-chat-widget.tsx  error-reporter-init.tsx  saved-views-bar.tsx
cron/: broadcast-response-tracker.ts  daily-digest.ts  poll-notifications.ts  sync-group-members.ts
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: cache.rs  keystore.rs  lib.rs  main.rs  notifications.rs
docs/: automation-builder.md  cpo-change-list-2026-03-28.md  cpo-change-list-2026-04-03.md  crm-north-star.md  implementation-plan.md  session-log-stages-3a-4c.md  sherlock-audit-2026-03-28.md
extensions/: vms.json
lib/: ai-key.ts  (+47 more)
(+917 files in other folders)
